# heist

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/custom/reviews/: recent-changes.md
results/frontier-2026-06-15/: report.html
scripts/: make_figures.py  make_leaderboard.py  make_report.py
src/heist/: __init__.py  __main__.py  agents.py  cli.py  config.py  difficulty.py  export.py  history.py  integrity.py  models.py  paths.py  progress.py  pty_agent.py  replay.py  reporting.py  runner.py  subprocess_utils.py  tasks.py  usage.py
src/heist/templates/: report.html
tasks/examples/: grader_safety.py
tasks/examples/course-prereq-scheduler/: task.yaml
tasks/examples/course-prereq-scheduler/hidden/: grader.py
tasks/examples/course-prereq-scheduler/reference/src/scheduler/: planner.py
tasks/examples/course-prereq-scheduler/workspace/tests/: test_visible.py
tasks/examples/notification-routing/: task.yaml
tasks/examples/notification-routing/hidden/: grader.py
tasks/examples/notification-routing/workspace/tests/: test_visible.py
tasks/examples/ticket-lifecycle/: task.yaml
tasks/examples/ticket-lifecycle/hidden/: grader.py
tasks/examples/ticket-lifecycle/workspace/tests/: test_visible.py
tests/: __init__.py  test_agents.py  test_cli.py  test_cli_runs.py  test_config.py  test_config_env.py  test_export_and_report.py  test_grader_contract.py  test_harness_sha.py  test_history.py  test_integrity.py  test_manifest_migration.py  test_pricing.py  test_pty_agent.py  test_replay.py  test_replay_cli.py  test_replay_report.py  test_report_baseline.py  test_report_leakfree.py  test_runner.py  test_runner_parallel.py  test_selection.py  test_tasks.py  test_usage.py
tests/fixtures/: fake_agent.py  marker.py  runs.py
(+9 files in other folders)
